--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,16 @@ DATABASE_URL="postgresql://postgres:password@db.example.supabase.co:5432/postgre
 PORT=3000
 NODE_ENV=development
 
-# Supabase Configuration (Optional - for using Supabase client features)
+# Logging Level
+# Options: debug, info, warn, error
+LOG_LEVEL=debug
+
+# Supabase Configuration
 # Find these in your Supabase project settings under API
 SUPABASE_URL=https://your-project-ref.supabase.co
 SUPABASE_ANON_KEY=your-anon-key-here
+
+# CORS Configuration
+# Frontend origins are configured in src/utils/corsOptions.ts
+# In development: allows any origin
+# In production: only allows origins in the allowedOrigins array
