Refactor server initialization: implement Redis caching with graceful shutdown handling

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,14 @@ SUPABASE_ANON_KEY=your-anon-key-here
 # Frontend origins are configured in src/utils/corsOptions.ts
 # In development: allows any origin
 # In production: only allows origins in the allowedOrigins array
+
+# Redis Cache Configuration (Optional)
+# Redis is used for caching and session management
+# Can be disabled by setting REDIS_ENABLED=false or omitting these variables
+REDIS_ENABLED=true
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+# For production/cloud Redis services, use REDIS_URL instead:
+# REDIS_URL=redis://username:password@host:port/db
+# Example for Redis Cloud: redis://default:password@redis-12345.c123.us-east-1-2.ec2.cloud.redislabs.com:12345
