--- a/package.json
+++ b/package.json
@@ -20,11 +20,7 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:migrate:create": "prisma migrate dev",
-    "db:studio": "prisma studio",
-    "docker:build": "docker build -t mywardrobe-api:latest .",
-    "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f app"
+    "db:studio": "prisma studio"
   },
   "devDependencies": {
     "@jest/globals": "^30.2.0",
