--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prisma": "^6.19.0",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.3",
     "uuid": "^13.0.0"
   },
