--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,12 @@ LOG_LEVEL=debug
 SUPABASE_URL=https://your-project-ref.supabase.co
 SUPABASE_ANON_KEY=your-anon-key-here
 
+# JWT Configuration
+# Generate 32+ character random strings using:
+# node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET=your_32_character_random_string_for_access_tokens_here
+JWT_REFRESH_SECRET=your_32_character_random_string_for_refresh_tokens_here
+
 # CORS Configuration
 # Frontend origins are configured in src/utils/corsOptions.ts
 # In development: allows any origin
