--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "devDependencies": {
     "@jest/globals": "^30.2.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
@@ -54,6 +56,7 @@
   "dependencies": {
     "@prisma/client": "^6.19.0",
     "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -63,6 +66,7 @@
     "express-validator": "^7.3.1",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
+    "jsonwebtoken": "^9.0.3",
     "redis": "^5.10.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
