feat: update environment configuration to replace Supabase with Neon PostgreSQL connection strings

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-# Database - Supabase PostgreSQL connection string
-# You can find this in your Supabase project settings under Database > Connection string
-# Format: postgresql://postgres.[PROJECT-REF]:[YOUR-PASSWORD]@aws-0-[REGION].pooler.supabase.com:6543/postgres?pgbouncer=true
-DATABASE_URL="postgresql://postgres:password@db.example.supabase.co:5432/postgres?schema=public"
+# Database - Neon PostgreSQL connection strings
+# Get these from your Neon project console
+# Both DATABASE_URL and DIRECT_URL should point to the same database
+DATABASE_URL="postgresql://user:password@ep-xxxx.us-east-1.neon.tech/neondb?sslmode=require"
+DIRECT_URL="postgresql://user:password@ep-xxxx.us-east-1.neon.tech/neondb?sslmode=require"
 
 # Server Configuration
 PORT=3000
@@ -10,11 +11,6 @@ NODE_ENV=development
 # Logging Level
 # Options: debug, info, warn, error
 LOG_LEVEL=debug
-
-# Supabase Configuration
-# Find these in your Supabase project settings under API
-SUPABASE_URL=https://your-project-ref.supabase.co
-SUPABASE_ANON_KEY=your-anon-key-here
 
 # JWT Configuration
 # Generate 32+ character random strings using:
