feat: enhance cookie handling for authentication, update environment variables, and improve CORS configuration

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,17 @@ DATABASE_URL="postgresql://user:password@ep-xxxx.us-east-1.neon.tech/neondb?sslm
 DIRECT_URL="postgresql://user:password@ep-xxxx.us-east-1.neon.tech/neondb?sslmode=require"
 
 # Server Configuration
-PORT=3000
+PORT=5000
 NODE_ENV=development
+
+# CORS & Frontend Configuration
+FRONTEND_URL=http://localhost:3000
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
+
+# Cookie Configuration (for httpOnly cookies across subdomains)
+# In development: leave empty
+# In production: set to the root domain (e.g., .hrshkshri.me)
+COOKIE_DOMAIN=
 
 # Logging Level
 # Options: debug, info, warn, error
